--- a/config/_default/menus.en.toml
+++ b/config/_default/menus.en.toml
@@ -5,41 +5,22 @@
   url = "/"
 
   [[main]]
-  name = "Posts"
+  name = "Blog"
   weight = 200
-  identifier = "posts"
-  url = "/post/"
+  identifier = "blog"
+  url = "/blog/"
 
   [[main]]
-  name = "Portfolio"
+  name = "Works"
   weight = 300
-  identifier = "portfolio"
-  url = "/portfolio/"
+  identifier = "works"
+  url = "/works/"
 
   [[main]]
   name = "About"
   weight = 400
   identifier = "about"
   url = "/about/"
-
-  [[main]]
-  name = "Accomplishments"
-  weight = 500
-  identifier = "accomplishments"
-
-  [[main]]
-  name = "Awards"
-  weight = 510
-  identifier = "awards"
-  url = "/awards/"
-  parent = "accomplishments"  
-
-  [[main]]
-  name = "Certifications"
-  weight = 520
-  identifier = "certifications"
-  url = "/certifications/"
-  parent = "accomplishments"
 
   [[main]]
   name = "Contact"
