--- a/config/_default/menus.en.toml
+++ b/config/_default/menus.en.toml
@@ -11,10 +11,10 @@
   url = "/blog/"
 
   [[main]]
-  name = "Works"
+  name = "Books"
   weight = 300
-  identifier = "works"
-  url = "/works/"
+  identifier = "books"
+  url = "/books/"
 
   [[main]]
   name = "About"
@@ -28,8 +28,8 @@
   identifier = "contact"
   url = "/contact/"
 
-  [[footer]]
-  name = "imprint"
-  weight = 1
-  identifier = "imprint"
-  url = "/imprint/"
+#  [[footer]]
+#  name = "imprint"
+#  weight = 1
+#  identifier = "imprint"
+#  url = "/imprint/"
