--- a/config/_default/hugo.toml
+++ b/config/_default/hugo.toml
@@ -26,7 +26,7 @@ pluralizelisttitles = false   # removes the automatically appended "s" on sideba
         # Limit:        If the files should be listed, how many should be shown.
     menu = [
         {Name = "Blog", URL = "/blog/", Pre = "Recent", HasChildren = true, Limit = 5},
-        {Name = "Projects", URL = "/projects/"},
+        {Name = "Books", URL = "/books/"},
     ]
 
     # Links to your socials.  Comment or delete any you don't need/use.
