--- a/config/_default/hugo.toml
+++ b/config/_default/hugo.toml
@@ -10,8 +10,7 @@ pluralizelisttitles = false   # removes the automatically appended "s" on sideba
 
 [params]
     brand = "S. K. Puindo"                      # name of your site - appears in the sidebar
-    remote_brand_image = 'https://github.com/skpuindo.png' # path to a remote file
-    # brand_image = "/images/test.jpg"    # path to the image shown in the sidebar
+    brand_image = '/images/jessdunnthis_spider.png'
     description = "S. K. Puindo <br /><small>dark epic fantasy author</small>" # Used as default meta description if not specified in front matter
     dark_mode = true                      # optional - defaults to false
     # favicon = "favicon.png"             # path to favicon (defaults to favicon.png)
